# PayDay

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  Clarinet.toml  Dockerfile  ISSUES.md  MULTI_TENANT_IMPLEMENTATION.md  README.md  automation.cjs  package.json  tsconfig.json  upstream_EmployeeEntry.tsx  upstream_PayrollScheduler.tsx  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile  EMPLOYEE_API.md  FILE_MANIFEST.md  MULTI_TENANT_ARCHITECTURE.md  MULTI_TENANT_SETUP.md  QUICKSTART_TESTING.md  README.md  SEARCH_IMPLEMENTATION.md  TESTING.md  TEST_SUMMARY.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  test-api.sh  test-employee-api.sh  test-multi-tenant.sh  tsconfig.json
chainhooks/: employee-added.json  expense-approved.json  payroll-executed.json
contracts/: payday-ext-1.clar  payday-ext-10.clar  payday-ext-11.clar  payday-ext-12.clar  payday-ext-13.clar  payday-ext-14.clar  payday-ext-15.clar  payday-ext-16.clar  payday-ext-17.clar  payday-ext-18.clar  payday-ext-19.clar  payday-ext-2.clar  payday-ext-20.clar  payday-ext-21.clar  payday-ext-22.clar  payday-ext-23.clar  payday-ext-24.clar  payday-ext-25.clar  payday-ext-26.clar  payday-ext-27.clar  payday-ext-28.clar  payday-ext-29.clar  payday-ext-3.clar  payday-ext-30.clar  payday-ext-4.clar  payday-ext-5.clar  payday-ext-6.clar  payday-ext-7.clar  payday-ext-8.clar  payday-ext-9.clar  (+31 more)
contracts/bulk_payment/: Cargo.toml
contracts/bulk_payment/src/: lib.rs  test.rs
(+430 files in other folders)
